Fix image width on mobile

--- a/resources/assets/sass/partials/content.scss
+++ b/resources/assets/sass/partials/content.scss
@@ -53,7 +53,7 @@ main ul:not(.breadcrumbs):not(.tags), main ol{
 }
 
 @media screen and (max-width: $mobile-size){
-  main img{
+  main img:not(.article-logo){
     width: 100%;
     height: auto;
   }
